modules/envoy-wasm/example-envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match: { prefix: '/' }
                          route: { cluster: service_openhttpa }
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: 'openhttpa_filter'
                        vm_config:
                          runtime: 'envoy.wasm.runtime.v8'
                          code:
                            local:
                              filename: 'envoy_wasm.wasm'
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: service_openhttpa
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_openhttpa
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9090
